--- a/src/Components/AboutUs/AboutUsHeader.module.scss
+++ b/src/Components/AboutUs/AboutUsHeader.module.scss
@@ -1,36 +1,49 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-.headerContainer{
-    display:flex;
+html {
+    scroll-behavior: smooth;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.headerContainer {
+    display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background: #e5e5e5;
-    padding-top: 2rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
+    background: #fff;
+    padding-top: 5rem;
+    padding-left: 7rem;
+    padding-right: 7rem;
     padding-bottom: 2rem;
     margin-bottom: 1rem;
 }
 
-.headerTickedbox{
+.headerTickedbox {
     width: 40%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 2rem;
+    padding: 4rem;
     margin-top: -2rem;
 }
 
-.ticked{
-    font-size: 3.8rem;
+.ticked {
+    font-size: 2.45rem;
     font-weight: 700;
     font-family: 'Open Sans', sans-serif;
     color: #141414;
+    // text-shadow: 2px 0 #141414;
+    //     letter-spacing: 2px;
     font-style: normal;
 }
+
 .tickedText {
     font-size: 1rem;
     font-weight: 400;
@@ -40,46 +53,50 @@
     margin-top: 1rem;
 }
 
-.button{
+.button {
     width: 17.6rem;
     height: 3rem;
     background: #714DD9;
-    color:#fff;
+    color: #fff;
     font-size: .71rem;
     font-weight: 600;
-    border:none;
+    border: none;
     cursor: pointer;
     border-radius: 8px;
     margin-top: 3rem;
 }
 
-.headerImageBox{
-    width: 60%;
-    height:100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+.headerImageBox {
+    width: 40.4rem;
+    height: 29.15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px dashed #714DD9;
+    border-radius: 5px;
+    justify-content: center;
+
 }
 
-.img{
-    width: 100%;
-    height: 100%;
+.img {
+    width: 39.8rem;
+    height: 28.4rem;
     background-size: cover;
     z-index: 200;
-    background-image: url('../../assets/ticked_about_header.png');
+    background-image: url('../../assets/ticked_about_header2.png');
 
 }
-.tickedabout{
+
+.tickedabout {
     display: none;
 }
 
 @media screen and (max-width: 768px) {
-.headerContainer {
+    .headerContainer {
         display: flex;
         width: 100%;
-        height: 100vh;
-        flex-direction: row;
+        height: 100%;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         background: #e5e5e5;
@@ -88,65 +105,81 @@
         padding-right: 1rem;
         padding-bottom: 4rem;
     }
+
+    .headerTickedbox {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 4rem;
+        margin-top: -2rem;
+    }
+
+
+    .tickedText {
+        line-height: 28.8px;
+    }
 }
 
 @media screen and (max-width: 480px) {
     .headerContainer {
-            display: flex;
-            width: 100%;
-            height: 100vh;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background: rgba(113, 77, 217, 0.1);
-            padding-top: 1rem;
-            padding-left: .0rem;
-            padding-right: .0rem;
-            padding-bottom: .025rem;
-        }
-    .ticked,.button {
-            display: none;
-        }
-    
-        .tickedText {
-        display: none;
-        }
-        .img {
-            width: 100%;
-            height: 100%;
-            background-size: cover;
-            z-index: 200;
-            background-position: center;
-            background-image: url('../../assets/ticked_about_header_mobile.png');
-        }
-        .headerImageBox {
-            width: 97%;
-            height: 100%;
-            display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            position: relative;
-        }
-        .headerTickedbox {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-        }
-        .tickedabout {
-            text-transform: capitalize;
-            font-size: 3rem;
-            font-weight: 700;
-            font-family: 'Open Sans', sans-serif;
-            color: #333333;
-            margin-top: -1.2rem;
-            display: block;
-            z-index: 400;
-        }
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #F6FAFB;
+        padding-top: 2rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-bottom: 2rem;
+    }
+
+    .ticked {
+        font-size: 1.45rem;
+        font-weight: 700;
+        font-family: 'Open Sans', sans-serif;
+        color: #141414;
+        // text-shadow: 2px 0 #141414;
+        //     letter-spacing: 2px;
+        font-style: normal;
+    }
+
+    .tickedText {
+        line-height: 28.8px;
+    }
+
+    .img {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        z-index: 200;
+        background-position: center;
+        background-image: url('../../assets/ticked_about_header2.png');
+    }
+
+    .headerImageBox {
+        width: 20.25rem;
+        height: 14.45rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px dashed #714DD9;
+        border-radius: 5px;
+        justify-content: center;
+        background: #F6FAFB;
+
+    }
+
+    .headerTickedbox {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        justify-content: center;
+        background-color: #fff;
+    }
 }
-
-
