--- a/src/pages/Notifications/NotificationItem.module.css
+++ b/src/pages/Notifications/NotificationItem.module.css
@@ -23,6 +23,13 @@
         display: flex;
     }
 
+    .justify_between{
+        justify-content: space-between;
+    }
+    .small_margin{
+        margin-top: 0.2rem;
+    }
+
     .d_block{
         display: block;
     }
@@ -36,4 +43,26 @@
         padding-bottom: 1rem;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
+    }
+
+    .item_margin{
+        margin: 1rem;
+    }
+
+    .dot5_margin_top{
+        margin-top: 0.5rem;
+    }
+
+    .grey_background{
+        background-color: #E9F3F5;
+    }
+
+    .white_background{
+        background-color: white;
+    }
+    .grey_border{
+        border: 1px solid #E9F3F5;
+    }
+    .border_radius{
+        border-radius: 0.5rem;
     }
