--- a/src/components/VA-Profile/VaProfile.css
+++ b/src/components/VA-Profile/VaProfile.css
@@ -1,33 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: #F6FAFB;
+  background: #f6fafb;
 }
 
 .major_container {
   width: 74.375rem;
-  height: 49rem; 
+  height: 49rem;
   position: relative;
 }
 
 .rating_container_div {
-  margin-bottom: 18.75rem; 
+  margin-bottom: 18.75rem;
   position: absolute;
-  top: 9.375rem; 
-  left: 56.25rem; 
+  top: 9.375rem;
+  left: 56.25rem;
 }
 
-       
 .header {
   display: flex;
   justify-content: flex-end;
   width: 74.375rem;
   height: 4rem;
-  background: #F6FAFB;
-  border-bottom: 0.063rem solid #E9F3F5;
+  background: #f6fafb;
+  border-bottom: 0.063rem solid #e9f3f5;
 }
 
 .header_profile_container {
@@ -37,7 +36,7 @@
 }
 
 .header_profile_image {
-  margin-right: 0.625rem; 
+  margin-right: 0.625rem;
 }
 
 .header_profile_name {
@@ -54,13 +53,12 @@
 
 .IoIosArrowDown {
   color: #333333;
-  width: 2.5rem; 
-  height: 1.875rem;  
+  width: 2.5rem;
+  height: 1.875rem;
 }
 
-
 .AiOutlineArrowLeft {
-  color: #576B75;
+  color: #576b75;
   width: 1rem;
   height: 1rem;
 }
@@ -77,28 +75,27 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  font-size: 0.75rem;  
-  line-height: 1.188rem; 
-  width: 1.688rem; 
-  height: 1.188rem; 
-  margin-left: 0.313rem; 
+  font-size: 0.75rem;
+  line-height: 1.188rem;
+  width: 1.688rem;
+  height: 1.188rem;
+  margin-left: 0.313rem;
 }
 
 .edit_container {
   display: flex;
   justify-content: space-between;
-  margin-bottom:  3.125rem;
-  
+  margin-bottom: 3.125rem;
 }
 
 .edit_button {
   border: none;
-  color: #714DD9;
+  color: #714dd9;
   display: flex;
   text-align: center;
   align-items: center;
-  width: 5.063rem; 
-  height: 1.188rem; 
+  width: 5.063rem;
+  height: 1.188rem;
   font-family: "Open Sans";
   font-family: normal;
   font-weight: 400;
@@ -110,38 +107,37 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 0.625rem; 
+  gap: 0.625rem;
 }
 
 .profile_icon_header {
-  color: #2B363B;
-  width: 5.188rem; 
-  height: 2.5rem; 
+  color: #2b363b;
+  width: 5.188rem;
+  height: 2.5rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  font-size : 1.563rem; 
-  line-height: 2.5rem; 
+  font-size: 1.563rem;
+  line-height: 2.5rem;
 }
-
 
 .profile_container_items {
   gap: 1.25rem;
 }
 
 .profile_container_items_header {
-  width: 7.125rem; 
-  height: 1.25rem; 
+  width: 7.125rem;
+  height: 1.25rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
-  font-size: 1rem; 
+  font-size: 1rem;
   line-height: 1.25rem;
   color: #333333;
 }
 
 .profile_container__virtualA {
-  width: 8.313rem; 
+  width: 8.313rem;
   height: 1.25rem;
   font-family: "Open Sans";
   font-style: normal;
@@ -152,31 +148,31 @@
 }
 
 .profile_container_items_paragraph {
-  width: 5.063rem; 
-  height: 1.188rem; 
+  width: 5.063rem;
+  height: 1.188rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  font-size: 0.75rem; 
+  font-size: 0.75rem;
   line-height: 1.188rem;
   color: #707070;
-  margin-bottom: 0.625rem; 
+  margin-bottom: 0.625rem;
 }
 
 .profile_container_num {
-  width: 7.125rem; 
-  height: 1.25rem; 
+  width: 7.125rem;
+  height: 1.25rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
   font-size: 1rem;
   line-height: 1.25rem;
   color: #333333;
-  margin-right:  2.438rem;
+  margin-right: 2.438rem;
 }
 
 .profile_container_address {
-  width:  9.5rem;
+  width: 9.5rem;
   height: 1.25rem;
   font-family: "Open Sans";
   font-style: normal;
@@ -193,7 +189,7 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  font-size: 0.75rem; 
+  font-size: 0.75rem;
   line-height: 1.188rem;
   color: #707070;
   margin-right: 1.25rem;
@@ -201,8 +197,8 @@
 }
 
 .profile_container_bio {
-  width: 25.188rem; 
-  height: 2.375rem; 
+  width: 25.188rem;
+  height: 2.375rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -213,28 +209,28 @@
 
 .profile_container_items_id {
   width: 5.063rem;
-  height:  1.188rem;
+  height: 1.188rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 1.188rem;
   color: #707070;
-  margin-top: 0.625rem; 
+  margin-top: 0.625rem;
 }
 
 .star {
   width: 1.25rem;
   height: 1.188rem;
-  color: #FDA758;
+  color: #fda758;
   margin-right: 0.313rem;
   margin-left: 0.313rem;
 }
 
-.CgProfile  {
+.CgProfile {
   width: 1.667rem;
   height: 1.667rem;
-  color: #714DD9;
+  color: #714dd9;
   margin-left: 2.5rem;
 }
 
@@ -254,8 +250,8 @@
 .button1 {
   width: 6.375rem;
   height: 2.438rem;
-  background: #714DD9;
-  color: #FFFFFF;
+  background: #714dd9;
+  color: #ffffff;
   border-radius: 0.25rem;
   font-family: "Open Sans";
   font-style: normal;
@@ -264,23 +260,23 @@
 }
 
 .button2 {
-  width: 9.375rem; 
-  height: 2.375rem; 
-  background: #714DD9;
-  color: #FFFFFF;
+  width: 9.375rem;
+  height: 2.375rem;
+  background: #714dd9;
+  color: #ffffff;
   border-radius: 0.25rem;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   border: none;
-  padding: 0.625rem; 
+  padding: 0.625rem;
 }
 
 .button3 {
   width: 7.5rem;
   height: 2.438rem;
-  background: #714DD9;
-  color: #FFFFFF;
+  background: #714dd9;
+  color: #ffffff;
   border-radius: 0.25rem;
   font-family: "Open Sans";
   font-style: normal;
@@ -291,9 +287,9 @@
 
 .button4 {
   width: 6.25rem;
-  height: 2.438rem; 
-  background: #714DD9;
-  color: #FFFFFF;
+  height: 2.438rem;
+  background: #714dd9;
+  color: #ffffff;
   border-radius: 0.25rem;
   font-family: "Open Sans";
   font-style: normal;
@@ -302,7 +298,6 @@
   padding: 0.625rem;
   display: flex;
 }
-
 
 .rating_container {
   margin-bottom: 1.25rem;
@@ -313,12 +308,11 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
-  width: 2.563rem; 
+  width: 2.563rem;
   height: 1.188rem;
-  line-height: 1.188rem; 
-  margin-bottom: 0.625rem; 
+  line-height: 1.188rem;
+  margin-bottom: 0.625rem;
 }
-
 
 .rating_star_header {
   width: 1.438rem;
@@ -327,7 +321,7 @@
   font-style: normal;
   font-size: 1.25rem;
   font-weight: 700;
-  line-height: 1.25rem; 
+  line-height: 1.25rem;
   color: #333333;
 }
 
@@ -341,50 +335,50 @@
   justify-content: center;
   align-items: center;
   padding: 16px 0px;
-  background: #FFFFFF;
-  border: 0.75px solid #E9F3F5;
+  background: #ffffff;
+  border: 0.75px solid #e9f3f5;
   border-radius: 0.5rem;
-  width: 15.625rem; 
-  height: 9.688rem; 
+  width: 15.625rem;
+  height: 9.688rem;
 }
 
 .profile_stats_header {
-  width: 5.313rem; 
-  height: 1.563rem; 
+  width: 5.313rem;
+  height: 1.563rem;
   font-family: "Open Sans";
   font-style: normal;
-  font-size: 0.875rem; 
+  font-size: 0.875rem;
   font-weight: 700;
-  line-height: 1.563rem; 
+  line-height: 1.563rem;
   color: #707070;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .profile_stats_items_container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0.938rem; 
-  gap: 1.125rem; 
-  width: 14.688rem;  
-  height: 5.125rem; 
-  background: #FFFFFF;
-  margin-top: 1.25rem; 
+  padding: 0.938rem;
+  gap: 1.125rem;
+  width: 14.688rem;
+  height: 5.125rem;
+  background: #ffffff;
+  margin-top: 1.25rem;
 }
 
 .profile_stats_items {
-    background: #FFFFFF;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 3.875rem; 
-    height: 3.875rem;
-    padding-right: 1.875rem; 
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 3.875rem;
+  height: 3.875rem;
+  padding-right: 1.875rem;
 }
 
 .profile_stats_items_header1 {
-  background: #FFFFFF;
-  width: 0.625rem; 
+  background: #ffffff;
+  width: 0.625rem;
   height: 1.25rem;
   font-family: "Open Sans";
   font-style: normal;
@@ -395,7 +389,7 @@
 }
 
 .profile_stats_items_header2 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 0.625rem;
   height: 1.25rem;
   font-family: "Open Sans";
@@ -404,11 +398,10 @@
   font-weight: 700;
   line-height: 1.25rem;
   color: #333333;
-  
 }
 
 .profile_stats_items_header3 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 0.625rem;
   height: 1.25rem;
   font-family: "Open Sans";
@@ -417,14 +410,12 @@
   font-weight: 700;
   line-height: 20px;
   color: #333333;
-
 }
 
-
 .profile_stats_items_paragraph1 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 3.188rem;
-  height: 2.375rem; 
+  height: 2.375rem;
   font-family: "Open Sans";
   font-style: normal;
   font-size: 0.75rem;
@@ -435,7 +426,7 @@
 }
 
 .profile_stats_items_paragraph2 {
-  background: #FFFFFF;
+  background: #ffffff;
   width: 3.188rem;
   height: 38px;
   font-family: "Open Sans";
@@ -448,14 +439,14 @@
 }
 
 .profile_stats_items_paragraph3 {
-  background: #FFFFFF;
-  width: 3.188rem; 
-  height: 2.375rem; 
+  background: #ffffff;
+  width: 3.188rem;
+  height: 2.375rem;
   font-family: "Open Sans";
   font-style: normal;
-  font-size:  0.75rem;
+  font-size: 0.75rem;
   font-weight: 400;
-  line-height: 1.188rem; 
+  line-height: 1.188rem;
   color: #707070;
   text-align: center;
 }
@@ -481,7 +472,3 @@
   margin-bottom: 2.5rem;
   display: flex;
 }
-
-
-
-
