--- a/src/components/VA-Profile/VaProfile.module.scss
+++ b/src/components/VA-Profile/VaProfile.module.scss
@@ -1,16 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 
+.app {
+  background-color: #F9F7FF;
+  padding: 2.5rem;
+}
+
+.profile_raw_box{
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
 
 .profile_container {
   display: flex;
   flex-direction: row;
-  margin: auto;
-  gap: 3rem;
+  gap: 2rem;
+  background: #FFFFFF;
+  border: 1px solid #D3D0D9;
+  border-radius: 8px;
+  padding: 2rem 1.5rem;
+  height: fit-content;
 }
 
-.rating_container_div{
-  margin-left: 14rem;
-}
+
 
 .header {
   display: flex;
@@ -30,15 +42,14 @@
 
 .back_button_container {
   display: flex;
-  margin-top: 2.5rem;
+  padding-top: 2.5rem;
+  margin-top: 0rem;
   margin-bottom: 3.125rem;
   margin-left: 2.5rem;
 }
 
 .back_button_header {
   color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
   font-weight: 400;
   font-size: 1rem;  
   width: 1.688rem; 
@@ -49,22 +60,25 @@
 .edit_container {
   display: flex;
   justify-content: space-between;
-  margin-bottom:  3.125rem;
-  background: #F6FAFB;
+  padding: 13px 24px;
+  margin: 0rem 0rem 3.125rem;
+  background: #FFFFFF;
+  border: 1px solid #D3D0D9;
+  border-radius: 8px;
 }
 
 .edit_button {
+  padding: 15px 24px;
   border: none;
-  color: #714DD9;
+  color: #FFFFFF;
   display: flex;
   text-align: center;
   align-items: center;
-  font-family: "Open Sans";
-  font-family: normal;
   font-weight: 400;
   font-size: 1rem;
-  margin-right: 2rem;
   background: #F6FAFB;
+  background: #714DD9;
+  border-radius: 4px;
 }
 
 .profile_icon_container {
@@ -79,8 +93,6 @@
   color: #2B363B;
   width: 5.188rem; 
   height: 2.5rem; 
-  font-family: "Open Sans";
-  font-style: normal;
   font-weight: 700;
   font-size : 1.563rem; 
   line-height: 2.5rem; 
@@ -88,22 +100,11 @@
 
 
 .profile_container_items {
-  gap: 1.25rem;
-  margin-left: -1.5rem;
+  margin-right: 5.5rem;
 }
 
-.profile_container_items_header {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1rem; 
-  line-height: 1.25rem;
-  color: #333333;
-}
 
 .profile_container__virtualA {
-  font-family: "Open Sans";
-  font-style: normal;
   font-weight: 700;
   font-size: 1rem;
   line-height: 1.25rem;
@@ -111,84 +112,20 @@
 }
 
 .profile_container_items_paragraph1 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem; 
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph2 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem; 
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph3 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem; 
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph4 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem; 
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph5 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem; 
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph6 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem; 
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph7 {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem; 
-  line-height: 1.188rem;
-  color: #707070;
-  margin-bottom: 0.625rem; 
-}
-
-
-.profile_container_num {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1rem;
-  line-height: 1.25rem;
+  font-weight: 600;
+  line-height: 100%;
   color: #333333;
-  margin-right:  2.438rem;
+  font-size: 0.75rem; 
+  margin-bottom: 0.625rem; 
+}
+
+
+.profile_container_num, .profile_container_items_header {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 180%;
+  color: #333333;
+  margin-right:  2rem;
 }
 
 .profile_container_address {
@@ -244,15 +181,12 @@
   width: 2rem;
   height: 2rem;;
   color: #714DD9;
-  margin-left: 2.5rem;
 }
 
 .main_profile_image {
   width: 6.25rem;
   height: 6.25rem;
-  margin-right: 1.5rem;
-  margin-left: 1.5rem;
-  margin-bottom: 25rem;
+  
 }
 
 .button_container {
@@ -261,66 +195,29 @@
 }
 
 .button1 {
-  width: 6.375rem;
-  height: 2.438rem;
-  background: #714DD9;
-  color: #FFFFFF;
-  border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  border: none;
-}
-
-.button2 {
-  width: 9.375rem; 
-  height: 2.375rem; 
-  background: #714DD9;
-  color: #FFFFFF;
-  border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  border: none;
-  padding: 0.625rem; 
-}
-
-.button3 {
-  width: 7.5rem;
-  height: 2.438rem;
-  background: #714DD9;
-  color: #FFFFFF;
-  border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  border: none;
+  width: fit-content;
   padding: 0.625rem;
-}
-
-.button4 {
-  width: 6.25rem;
-  height: 2.438rem; 
-  background: #714DD9;
-  color: #FFFFFF;
+  color: #714DD9;
   border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
+  background: linear-gradient(0deg, rgba(113, 77, 217, 0.11), rgba(113, 77, 217, 0.11)), #FFFFFF;
   font-weight: 400;
   border: none;
-  padding: 0.625rem;
-  display: flex;
 }
+
+
 
 
 .rating_container {
+  width: 15.625rem;
   margin-bottom: 1.25rem;
+  padding: 1rem;
+  background: #FFFFFF;
+  border: 1px solid #D3D0D9;
+  border-radius: 8px;
 }
 
 .rating_header {
   color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
   font-weight: 400;
   width: 2.563rem; 
   height: 1.188rem;
@@ -332,12 +229,10 @@
 .rating_star_header {
   width: 1.438rem;
   height: 1.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
   font-size: 1.25rem;
   font-weight: 700;
   line-height: 1.25rem; 
-  color: #333333;
+  color: #714DD9;
 }
 
 .profile_container {
@@ -348,18 +243,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   padding: 16px 0px;
   background: #FFFFFF;
-  border: 0.75px solid #E9F3F5;
+  border: 1px solid #D3D0D9;
   border-radius: 0.5rem;
-  width: 15.625rem; 
+  width: inherit; 
   height: 9.688rem; 
 }
 
 .profile_stats_header {
-  font-family: "Open Sans";
-  font-style: normal;
   font-size: 0.875rem; 
   font-weight: 700;
   line-height: 1.563rem; 
@@ -370,13 +262,13 @@
 .profile_stats_items_container {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center;
   padding: 0.938rem; 
   gap: 1.125rem; 
-  width: 14.688rem;  
+  width: fit-content;  
   height: 5.125rem; 
   background: #FFFFFF;
-  margin-top: 1.25rem; 
+  margin: auto; 
 }
 
 .profile_stats_items {
@@ -393,8 +285,6 @@
   background: #FFFFFF;
   width: 0.625rem; 
   height: 1.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
   font-size: 1rem;
   font-weight: 700;
   line-height: 1.25rem;
@@ -405,8 +295,6 @@
   background: #FFFFFF;
   width: 0.625rem;
   height: 1.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
   font-size: 1rem;
   font-weight: 700;
   line-height: 1.25rem;
@@ -418,8 +306,6 @@
   background: #FFFFFF;
   width: 0.625rem;
   height: 1.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
   font-size: 1rem;
   font-weight: 700;
   line-height: 20px;
@@ -432,8 +318,6 @@
   background: #FFFFFF;
   width: 3.188rem;
   height: 2.375rem; 
-  font-family: "Open Sans";
-  font-style: normal;
   font-size: 0.75rem;
   font-weight: 400;
   line-height: 1.188rem;
@@ -445,8 +329,6 @@
   background: #FFFFFF;
   width: 3.188rem;
   height: 38px;
-  font-family: "Open Sans";
-  font-style: normal;
   font-size: 0.75rem;
   font-weight: 400;
   line-height: 1.188rem;
@@ -458,8 +340,6 @@
   background: #FFFFFF;
   width: 3.188rem; 
   height: 2.375rem; 
-  font-family: "Open Sans";
-  font-style: normal;
   font-size:  0.75rem;
   font-weight: 400;
   line-height: 1.188rem; 
@@ -497,15 +377,9 @@
   .profile_container {
    display: flex;
    flex-direction: column;
-   margin: auto;
 }
 
-.back_button_container {
-  display: flex;
-  margin-top: 2.5rem;
-  margin-bottom: 3.125rem;
-  margin-left: 0rem;
-}
+
 
 .edit_container {
   display: flex;
@@ -523,122 +397,11 @@
 .button1 {
   width: 9.375rem; 
   height: 2.375rem; 
-  background: #714DD9;
-  color: #FFFFFF;
-  border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
   font-weight: 400;
   border: none;
 }
 
-.button2 {
-  width: 9.375rem; 
-  height: 2.375rem; 
-  background: #714DD9;
-  color: #FFFFFF;
-  border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  border: none;
-  padding: 0.625rem; 
-  display: flex;
-  justify-content: center;
-}
 
-.button3 {
-  width: 9.375rem; 
-  height: 2.375rem; 
-  background: #714DD9;
-  color: #FFFFFF;
-  border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  border: none;
-  padding: 0.625rem;
-  display: flex;
-  justify-content: center;
-}
-
-.button4 {
-  width: 9.375rem; 
-  height: 2.375rem; 
-  background: #714DD9;
-  color: #FFFFFF;
-  border-radius: 0.25rem;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 400;
-  border: none;
-  padding: 0.625rem;
-  display: flex;
-  justify-content: center;
-}
-
-.profile_container_items_paragraph1 {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph2 {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph3 {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph4 {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph5 {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph6 {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
-
-.profile_container_items_paragraph7 {
-  color: #707070;
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 0.625rem; 
-}
 
 .rating_header {
   color: #707070;
@@ -693,21 +456,13 @@
 .edit_container {
   display: flex;
   margin-bottom:  3.125rem;
-  background: #F6FAFB;
   margin-left: 0rem;
 }
 
 .edit_button {
   border: none;
-  color: #714DD9;
   display: flex;
   text-align: center;
-  align-items: center;
-  font-family: "Open Sans";
-  font-family: normal;
-  font-weight: 600;
-  background: #F6FAFB;
-  margin-top: 0.7rem;
 }
 
 .profile_container_items_id {
@@ -768,17 +523,10 @@
 }
 
 .profile_container_num {
-  font-family: "Open Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 1rem;
-  color: #333333;
   margin-bottom: 1.5rem;
 }
 
-.rating_container_div{
-  margin-left: 0rem;
-}
+
 
 .profile_container_items {
   gap: 1.25rem;
@@ -794,10 +542,7 @@
 /**********      Tablet view  *************/
 @media screen and (max-width: 1366px) {
   .profile_container {
-   display: flex;
-   flex-direction: column;
-   margin: auto;
-}
+   display: flex;}
 
 .back_button_header {
   color: #707070;
@@ -816,16 +561,8 @@
 }
 
 .edit_button {
-  border: none;
-  color: #714DD9;
-  display: flex;
   text-align: center;
-  align-items: center;
-  font-family: "Open Sans";
-  font-family: normal;
   font-weight: 600;
-  background: #F6FAFB;
-  margin-top: 0.7rem;
 }
 
 .main_profile_image {
@@ -846,20 +583,11 @@
 .edit_container {
   display: flex;
   margin-bottom:  3.125rem;
-  background: #F6FAFB;
   margin-left: 0rem;
 }
 
-.back_button_container {
-  display: flex;
-  margin-top: 2.5rem;
-  margin-bottom: 3.125rem;
-  margin-left: 0rem;
-}
 
-.rating_container_div{
-  margin-left: 0rem;
-}
+
 
 .profile_container_items {
   gap: 1.25rem;
